Enhance Dockerfile and update dependencies for improved build and functionality
- Add gcc/dev headers installation for networkx in the Dockerfile to ensure compatibility.
- Update requirements.txt to specify versions and add new dependencies: networkx and scipy for enhanced graphing capabilities.
- Modify .env file handling in Dockerfile to emphasize security risks and recommend best practices for managing sensitive information.
- Refactor stats.py to introduce a new daily heatmap report and a relationship network graph command, improving data visualization and user engagement.
- Optimize TTS cog with improved queue management and error handling, ensuring more reliable text-to-speech functionality.
- Refactor configuration loading in config.py for better error handling and logging of environment variables.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,16 @@
-discord.py
-gTTS==2.2.3
-PyNaCl==1.5.0
-matplotlib==3.7.2
-seaborn==0.12.2
-pyttsx3==2.90
-backoff==2.2.1
-aiohttp==3.8.5
-apscheduler==3.10.1
-pytz==2023.3
-numpy==1.23.5
-pandas==2.1.1
-pymongo
+discord.py>=2.0.0
 python-dotenv
+pymongo[srv]
+gTTS
+asyncio
+seaborn
+matplotlib
+pytz
+numpy
+pandas
+backoff
+aiohttp
+APScheduler
+networkx # Added for relationship graph
+PyNaCl # Needed for voice support
+scipy # Added for kamada_kawai_layout in plotting
